Fix spacing

--- a/src/components/Dialog/Content/styles.css
+++ b/src/components/Dialog/Content/styles.css
@@ -17,8 +17,20 @@
   padding-left: 0;
   padding-right: 0;
 }
+.spacing-x-xloose {
+  @media (--sm-up) {
+    padding-left: var(--spacing-x-loose);
+    padding-right: var(--spacing-x-loose);
+  }
+}
 
 .spacing-y-0 {
   padding-top: 0;
   padding-bottom: 0;
+}
+.spacing-y-xloose {
+  @media (--sm-up) {
+    padding-top: var(--spacing-x-loose);
+    padding-bottom: var(--spacing-x-loose);
+  }
 }
